most example notebooks I could think of

--- a/analysis/spectra_20_5_1.ipynb
+++ b/analysis/spectra_20_5_1.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Wavenumber spectra plots \n",
+    "** frequency or wavenumber frequency spectra calculations are in a separate notebook. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -1480,6 +1488,20 @@
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
