--- a/analysis/Velocity_n_flux_wavenum_freq_spec(20_5_1)_400m_upstream.ipynb
+++ b/analysis/Velocity_n_flux_wavenum_freq_spec(20_5_1)_400m_upstream.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -122,6 +122,89 @@
    "outputs": [],
    "source": [
     "# lets do the calculation for a 15 day period from day 95-110\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# trial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dbalwada/miniconda/envs/dhruvenv/lib/python3.5/site-packages/xmitgcm-0.2.1-py3.5.egg/xmitgcm/mds_store.py:721: UserWarning: Couldn't find available_diagnostics.log in /swot/SUM05/dbalwada/channel_beta/20km/tracer_exp2/. Using default version.\n",
+      "  \"in %s. Using default version.\" % data_dir)\n",
+      "/home/dbalwada/miniconda/envs/dhruvenv/lib/python3.5/site-packages/xmitgcm-0.2.1-py3.5.egg/xmitgcm/utils.py:314: UserWarning: Not sure what to do with rlev = L\n",
+      "  warnings.warn(\"Not sure what to do with rlev = \" + rlev)\n",
+      "/home/dbalwada/miniconda/envs/dhruvenv/lib/python3.5/site-packages/xmitgcm-0.2.1-py3.5.egg/xmitgcm/mds_store.py:235: FutureWarning: iteration over an xarray.Dataset will change in xarray v0.11 to only include data variables, not coordinates. Iterate over the Dataset.variables property instead to preserve existing behavior in a forwards compatible manner.\n",
+      "  for vname in ds:\n"
+     ]
+    }
+   ],
+   "source": [
+    "iters= res_time['20']['iter1']\n",
+    "ds = open_mdsdataset(res_time['20']['dirname'],  iters=iters,\n",
+    "                                 delta_t=res_time['20']['dt'], prefix=['W','PTRACER01']\n",
+    "                         ,ignore_unknown_vars=True, geometry='cartesian')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xarray.DataArray 'XC' (XC: 100)>\n",
+       "array([  10000.,   30000.,   50000.,   70000.,   90000.,  110000.,  130000.,\n",
+       "        150000.,  170000.,  190000.,  210000.,  230000.,  250000.,  270000.,\n",
+       "        290000.,  310000.,  330000.,  350000.,  370000.,  390000.,  410000.,\n",
+       "        430000.,  450000.,  470000.,  490000.,  510000.,  530000.,  550000.,\n",
+       "        570000.,  590000.,  610000.,  630000.,  650000.,  670000.,  690000.,\n",
+       "        710000.,  730000.,  750000.,  770000.,  790000.,  810000.,  830000.,\n",
+       "        850000.,  870000.,  890000.,  910000.,  930000.,  950000.,  970000.,\n",
+       "        990000., 1010000., 1030000., 1050000., 1070000., 1090000., 1110000.,\n",
+       "       1130000., 1150000., 1170000., 1190000., 1210000., 1230000., 1250000.,\n",
+       "       1270000., 1290000., 1310000., 1330000., 1350000., 1370000., 1390000.,\n",
+       "       1410000., 1430000., 1450000., 1470000., 1490000., 1510000., 1530000.,\n",
+       "       1550000., 1570000., 1590000., 1610000., 1630000., 1650000., 1670000.,\n",
+       "       1690000., 1710000., 1730000., 1750000., 1770000., 1790000., 1810000.,\n",
+       "       1830000., 1850000., 1870000., 1890000., 1910000., 1930000., 1950000.,\n",
+       "       1970000., 1990000.], dtype=float32)\n",
+       "Coordinates:\n",
+       "  * XC       (XC) >f4 10000.0 30000.0 50000.0 ... 1950000.0 1970000.0 1990000.0\n",
+       "Attributes:\n",
+       "    units:          m\n",
+       "    coordinate:     YC XC\n",
+       "    standard_name:  plane_x_coordinate\n",
+       "    long_name:      x coordinate\n",
+       "    axis:           X"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds.XC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# end trial"
    ]
   },
   {
